--- a/.github/workflows/login.yml
+++ b/.github/workflows/login.yml
@@ -38,6 +38,7 @@ jobs:
         run: npm install puppeteer axios
   
       - name: Login into Serv00/CT8
-        run: |  
+        run: | 
+          chmod +x src/main.js
           set -e  
           xvfb-run --server-args="-screen 0 1280x1024x24" node src/main.js
